--- a/scripts/install
+++ b/scripts/install
@@ -157,13 +157,10 @@ chmod -R o-rwx "$datadir"
 chown -R $app:www-data "$datadir"
 
 #=================================================
-# CREATE TEMP DIRECTORY
+# REMOVE TEMP DIRECTORY
 #=================================================
-ynh_script_progression --message="Creating temp directory..." --weight=1
-mkdir -p "/tmp/$app"
-chmod 700 "/tmp/$app"
-chmod -R go-rwx "/tmp/$app"
-chown -R $app:$app "/tmp/$app"
+ynh_script_progression --message="Cleanup temp directory..." --weight=1
+ynh_secure_remove --file="/tmp/$app"
 
 #=================================================
 # ADD A CONFIGURATION
