Include built gs in Environment

--- a/scripts/install
+++ b/scripts/install
@@ -71,6 +71,8 @@ popd
 chown -R $app:$app "$install_dir/ghostscript"
 chmod 550 $install_dir/ghostscript/bin/gs
 
+local_path=$install_dir/ghostscript/bin/gs:$PATH
+
 #=================================================
 # CREATE DATA DIRECTORY
 #=================================================
