--- a/scripts/install
+++ b/scripts/install
@@ -66,12 +66,15 @@ pushd $install_dir/ghostscript
     ynh_exec_warn_less ./configure
     ynh_exec_warn_less make
     ynh_exec_warn_less make install
+    mv bin/ $install_dir/
 popd
 
-chown -R $app:$app "$install_dir/ghostscript"
-chmod 550 $install_dir/ghostscript/bin/gs
+ynh_secure_remove --file="$install_dir/ghostscript"
+chmod -R o-rwx "$install_dir/bin"
+chown -R $app:$app "$install_dir/bin"
+chmod 550 $install_dir/gs
 
-local_path=$install_dir/ghostscript/bin/:$PATH
+local_path=$install_dir/bin/:$PATH
 
 #=================================================
 # CREATE DATA DIRECTORY
